WIP: flash annotation cards when updated by the stream
This is a proof of concept to demonstrate flashing annotation cards when
updates arrive via the websocket. It's pretty ugly at the moment.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -35,6 +35,10 @@ $threadexp-width: .6em;
     &:focus { outline: 0; }
   }
 
+  &.thread-flash {
+    background-color: #ffc;
+  }
+
   .thread {
     border-left: 1px dotted $gray-light;
     padding: 0;
